--- a/.github/workflows/github-actions-demo.yml
+++ b/.github/workflows/github-actions-demo.yml
@@ -1,27 +1,63 @@
-name: Java CI with Gradle
+name: Java CI/CD with Gradle to AWS EC2
 
 on:
   push:
     branches: [ "master" ]
 
 jobs:
-  build-and-test:
+  build-and-deploy:
     runs-on: ubuntu-latest
     steps:
+      # 1. 소스 코드 체크아웃
       - name: Checkout
         uses: actions/checkout@v5
 
+      # 2. JDK 17 설정
       - name: Set up JDK 17
         uses: actions/setup-java@v4
         with:
           java-version: '17'
           distribution: 'temurin'
 
+      # 3. gradlew 실행 권한 부여
       - name: Grant execute permission for gradlew
         run: chmod +x gradlew
 
       - name: Test with Gradle
         run: ./gradlew test
 
+      # 4. Gradle로 빌드 및 테스트 실행
       - name: Build with Gradle
-        run: ./gradlew build
+        run: ./gradlew build --no-daemon
+
+      # 5. 빌드된 JAR 파일 이름 찾기
+      - name: Find JAR file name
+        id: find_jar
+        run: echo "filename=$(basename $(find build/libs -name 'sample-ci-server-*.jar'))" >> $GITHUB_OUTPUT
+
+      # 6. EC2로 JAR 파일 복사 (scp)
+      - name: Copy JAR to EC2
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          source: "build/libs/${{ steps.find_jar.outputs.filename }}"
+          target: /home/${{ secrets.EC2_USERNAME }}
+
+      # 7. EC2에서 애플리케이션 배포 (ssh)
+      - name: Deploy on EC2
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.EC2_HOST }}
+          username: ${{ secrets.EC2_USERNAME }}
+          key: ${{ secrets.EC2_SSH_KEY }}
+          script: |
+            JAR_FILE=${{ steps.find_jar.outputs.filename }}
+            
+            # 기존 프로세스 종료
+            pkill -f "java -jar $JAR_FILE" || true
+            
+            # 새 프로세스를 백그라운드에서 시작
+            cd /home/${{ secrets.EC2_USERNAME }}
+            nohup java -jar $JAR_FILE > app.log 2>&1 &
